--- a/leyou/pom.xml
+++ b/leyou/pom.xml
@@ -79,6 +79,12 @@
                 <artifactId>fastdfs-client</artifactId>
                 <version>${fastDFS.client.version}</version>
             </dependency>
+			<!--FastDFS客户端-->
+            <dependency>
+                <groupId>com.github.tobato</groupId>
+                <artifactId>fastdfs-client</artifactId>
+                <version>${fastDFS.client.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
